{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 31,
  "lineage": "abd6d83a-769d-f283-1c32-045c93dd51ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "projectgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:internet-gateway/igw-0fcde2d161de25e39",
            "id": "igw-0fcde2d161de25e39",
            "owner_id": "025907389247",
            "region": "us-east-1",
            "tags": {
              "Name": "main-project-gw"
            },
            "tags_all": {
              "Name": "main-project-gw"
            },
            "vpc_id": "vpc-01cf38cfa7bc0c679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetcreate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:subnet/subnet-0d895615edc927af7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d895615edc927af7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025907389247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-01cf38cfa7bc0c679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetcreate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:subnet/subnet-0981edfe0941f2af3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0981edfe0941f2af3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025907389247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-01cf38cfa7bc0c679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_server_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0150ccaf51ab55a51",
            "arn": "arn:aws:ec2:us-east-1:025907389247:instance/i-0cee24a0ede696b5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cee24a0ede696b5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07de69c1d506b5683",
            "private_dns": "ip-10-0-0-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.208",
            "public_ip": "18.206.155.84",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-028072d5f0db65dc8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4b41d1327d7fa97",
            "tags": {
              "Name": "proxy-1"
            },
            "tags_all": {
              "Name": "proxy-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c7d4b97675c79d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.proxy_server_1.aws_security_group.allow-ssh-http",
            "module.public_subnet_1.aws_subnet.subnetcreate",
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_server_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:security-group/sg-013c7d4b97675c79d",
            "description": "Allow ssh and http inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013c7d4b97675c79d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh-http",
            "name_prefix": "",
            "owner_id": "025907389247",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cf38cfa7bc0c679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_server_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allowallipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:security-group-rule/sgr-0aa7fa50b25f552be",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0aa7fa50b25f552be",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-013c7d4b97675c79d",
            "security_group_rule_id": "sgr-0aa7fa50b25f552be",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.proxy_server_1.aws_security_group.allow-ssh-http",
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_server_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:security-group-rule/sgr-0825848cb46a5c636",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0825848cb46a5c636",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-013c7d4b97675c79d",
            "security_group_rule_id": "sgr-0825848cb46a5c636",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.proxy_server_1.aws_security_group.allow-ssh-http",
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.proxy_server_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:security-group-rule/sgr-038913e89b9fa977b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-038913e89b9fa977b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-013c7d4b97675c79d",
            "security_group_rule_id": "sgr-038913e89b9fa977b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.proxy_server_1.aws_security_group.allow-ssh-http",
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetcreate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:subnet/subnet-0d4b41d1327d7fa97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4b41d1327d7fa97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025907389247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01cf38cfa7bc0c679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetcreate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:subnet/subnet-099b8661de18a2ecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b8661de18a2ecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025907389247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-01cf38cfa7bc0c679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "projectvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:025907389247:vpc/vpc-01cf38cfa7bc0c679",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a7141f78ac8132f",
            "default_route_table_id": "rtb-0e007cdbfd351a058",
            "default_security_group_id": "sg-0221d286cda22bce9",
            "dhcp_options_id": "dopt-0f6ef56ca7df0a774",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cf38cfa7bc0c679",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e007cdbfd351a058",
            "owner_id": "025907389247",
            "region": "us-east-1",
            "tags": {
              "Name": "Main-project-VPC"
            },
            "tags_all": {
              "Name": "Main-project-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}